kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      initContainers: # This should be outside of the containers block
        - name: busybox
          image: busybox:latest
          args: ['rm', '-rf', '/var/lib/mysql/lost+found']
          volumeMounts:
            - name: vpro-db-data
              mountPath: /var/lib/mysql

      containers:
        - name: vprodb
          image: routparesh/vprodb:latest
          ports:
            - name: vprodb-port
              containerPort: 3306
          volumeMounts:
            - name: vpro-db-data
              mountPath: /var/lib/mysql

      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
