kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb-service
  labels:
    app: vprodb
spec:
  type: ClusterIP # Change to NodePort or LoadBalancer if needed
  ports:
    - port: 3306 # MySQL port
      targetPort: vprodb-port
      protocol: TCP
  selector:
    app: vprodb # Matches the label of the deployment
