kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq-service
  labels:
    app: vpromq01
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: vprormq-port
      protocol: TCP
  selector:
    app: vprormq
