kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassname: nginx
  rules:
    - host: vprofile.paresh.work
      http:
        paths:
          - path: /
            pathType: Perfix
            backend:
              service:
                name: vproapp-service
                port:
                  number: 8080
